src/objects/Milestone_Billing__c.object
<CustomObject>
    <description>For milestone billing events that are output to North America Document Templates.  Used for Turnkey or Maintenance Agreements.</description>
    <fields>
        <fullName>Milestone_Amount__c</fullName>
        <inlineHelpText>Net Price of the Quote/Proposal</inlineHelpText>
        <label>Milestone Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <inlineHelpText>Definition of the Billing Milestone Name</inlineHelpText>
        <label>Milestone Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Percentage__c</fullName>
        <inlineHelpText>Percentage of the total job (% of milestone amount, no calculations are based on this field at this time)</inlineHelpText>
        <label>Milestone Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>The Quote this milestone belongs to</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>Milestone_Billings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Table_Sequense__c</fullName>
        <inlineHelpText>Used to determine sequence of Milestones in output document.</inlineHelpText>
        <label>Table Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Milestone</label>
    <nameField>
        <label>Billing Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>